@startuml

class AddItemController {
    serialField : TextField
    nameField : TextField
    valueField : TextField
    addItemButton : Button
    cancelButton : Button
    invalidSerialLabel : Label
    invalidNameLabel : Label
    invalidValueLabel : Label
    storage : InventoryStore
    sceneManager : SceneManager
    AddItemController()
    addItemClicked()
    cancelButtonClicked()
    exit()
    addItem()
    refreshLabels()
    refreshFields()
    refreshTable()
}

class EditItemController {
    serialField : TextField
    nameField : TextField
    valueField : TextField
    updateItemButton : Button
    cancelButton : Button
    invalidSerialLabel : Label
    invalidNameLabel : Label
    invalidValueLabel : Label
    storage : InventoryStore
    sceneManager : SceneManager
    i : InventoryItem
    EditItemController()
    exit()
    updateItemClicked()
    cancelButtonClicked()
    updateItem()
    refreshLabels()
    refreshFields()
    showData()
}

class InventoryController {
    tableDisplay : TableView
    col1 : TableColumn
    col2 : TableColumn
    col3 : TableColumn
    refreshButton : Button
    saveButton : Button
    loadButton : Button
    addItemButton : Button
    removeItemButton : Button
    editItemButton : Button
    searchButton : Button
    searchField : TextField
    searchByBox : ChoiceBox
    storage : InventoryStore
    sceneManager : SceneManager
    InventoryController()
    initialize()
    addItemClicked()
    editItemClicked()
    removeItemClicked()
    searchClicked()
    refreshButtonClicked()
    saveButtonClicked()
    loadButtonClicked()
    enterWindow()
    refresh()
    removeItem()
    search()
    searchBySerial()
    searchByName()
}


class InventoryIO {
    saveFile()
    saveAsTSV()
    saveAsJSon()
    saveAsHTML()
    loadFile()
    loadFromTSV()
    loadFromJSon()
    loadFromHTML()
}

class InventoryItem {
    serial : String
    name : String
    value : BigDecimal
    InventoryItem()
    getName()
    setName()
    getSerial()
    setSerial()
    getValue()
    setValue()
    equals()
    hashCode()
}

class InventoryStore{
    items : ArrayList
    serialSet : Set
    selectedItem : InventoryItem
    table : TableView
    InventoryStore()
    addItem()
    removeItem()
    getItems()
    setItems()
    getSerialSet()
    refreshTable()
}

class PersonalInventory {
    main()
    start()
}

class SceneManager {
    scenes : Map
    load()
    getScene()
}

class Validator {
    nameValidator()
    serialValidator()
}



javafx.Application <|- PersonalInventory
PersonalInventory - SceneManager
SceneManager - InventoryStore
SceneManager -- InventoryController
SceneManager -- AddItemController
SceneManager -- EditItemController
InventoryStore -- InventoryItem
InventoryController --- InventoryStore
InventoryController --- InventoryIO
AddItemController --- InventoryStore
AddItemController -- Validator
EditItemController --- InventoryStore
EditItemController - InventoryItem
EditItemController -- Validator
InventoryIO -- InventoryItem


@enduml